working on task

--- a/src/app/pages/sign-in/sign-in.component.css
+++ b/src/app/pages/sign-in/sign-in.component.css
@@ -1,3 +1,13 @@
+/*
+============================================
+; Title:  sign-in.component.css
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
+; Date:   18 March 2020
+; Description: css for sign in
+;===========================================
+*/
+
 .signin-container{
 margin-top: 15%;
 width: 50%;
