--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -1,3 +1,13 @@
+/*
+============================================
+; Title:  task-manager.component.css
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
+; Date:   18 March 2020
+; Description: css for task manager
+;===========================================
+*/
+
 .example-container {
   width: 400px;
   max-width: 100%;
