--- a/src/app/pages/task-manager/task-manager.component.html
+++ b/src/app/pages/task-manager/task-manager.component.html
@@ -1,3 +1,14 @@
+<!-- /*
+============================================
+; Title:  home.component.html
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
+; Date:   18 March 2020
+; Description: home component html
+;===========================================
+*/ -->
+
+<h1>{{empId}}</h1>
 <div fxLayout="row" class="myContainer">
 
 <div fxFlex class="example-container">
