finished up task management page. woking on errors

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,19 @@
-<p>about works!</p>
+<div fxLayout="column" class="main-welcome" fxLayoutGap=10px>
+  <h1 fxFlex class="title">
+    Nodebucket 101
+    <br>
+    <span class="subtitle">Subtitle for my about</span>
+  </h1>
+  <div class="about-content">
+    <mat-divider></mat-divider><br>
+    <p class="mat-body-for">
+      <span class="p-title mat-headline">Overview</span><br>
+      personal about page info. what is nodebucket to me
+    </p>
+    <p class="mat-body-for">
+      <span class="p-title mat-headline">
+        talking about the application itself
+      </span>
+    </p>
+  </div>
+</div>
