--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,4 +5,5 @@
       Pay close attention to the requirements, double and triple check the files for code attribution, and do not wait unitl the last minute to begin working on each item.
     </span>
   </h1>
+  <!-- <app-task-manager></app-task-manager> -->
 </div>
