--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -1,32 +1,49 @@
 /*
 ============================================
 ; Title:  task-manager.component.css
-; Author: Richard Krasso
-; Modified By: Loren Wetzel
+; Author: Loren Wetzel
+; Modified By:
 ; Date:   18 March 2020
 ; Description: css for task manager
 ;===========================================
 */
 
+.myContainer{
+  width: 70%;
+  margin: 0 auto;
+}
+.cdk-drag-preview {
+  box-sizing: border-box;
+  /* border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12); */
+}
+
+.title {
+  text-align: center;
+  font-weight: lighter;
+}
+
 .example-container {
-  width: 400px;
+  /* width: 400px;
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: top; */
 }
 
 .example-list {
-  border: solid 1px #ccc;
+  /* border: solid 1px #ccc;
   min-height: 60px;
   background: white;
   border-radius: 4px;
   overflow: hidden;
-  display: block;
+  display: block; */
 }
 
 .example-box {
-  padding: 20px 10px;
+  /* padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
@@ -36,34 +53,25 @@
   box-sizing: border-box;
   cursor: move;
   background: white;
-  font-size: 14px;
+  font-size: 14px; */
 }
 
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
+
 
 .cdk-drag-placeholder {
-  opacity: 0;
+  /* opacity: 0; */
 }
 
 .cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  /* transition: transform 250ms cubic-bezier(0, 0, 0.2, 1); */
 }
 
 .example-box:last-child {
-  border: none;
+  /* border: none; */
 }
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  /* transition: transform 250ms cubic-bezier(0, 0, 0.2, 1); */
 }
 
-.myContainer{
-  width: 80%;
-  margin: 15px auto 0;
-}
+
