--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,55 +1,50 @@
 <!-- /*
 ============================================
-; Title:  home.component.html
-; Author: Richard Krasso
-; Modified By: Loren Wetzel
+; Title:  nodebucket
+; Author: Loren Wetzel
+; Modified By:
 ; Date:   18 March 2020
-; Description: home component html
+; Description: sign-in component html
 ;===========================================
 */ -->
 
 <div fxLayout="column">
+
   <mat-card fxFlex class="signin-container mat-elevation-z8">
 
-    <mat-card-title class="signin-title mat-headline">Employee Sign In</mat-card-title>
-    <br />
-    <mat-card-subtitle class="signin-subtitle mat-headline">Must enter a valid id to proceed</mat-card-subtitle>
+    <mat-card-title class="signin-title mat-headline">Employee Sign-in</mat-card-title><br />
+
+    <mat-card-subtitle class="signin-subtitle mat-headline">You must enter a valid employee id to proceed
+    </mat-card-subtitle>
 
     <mat-card-content>
-      <mat-card class="mat-elevation-z8" fxLayout="column" fxLayoutGap>
-        <form [formGroup]="form"
-              (ngSubmit)="login();
-              form.reset"
-              #loginForm="ngForm">
+
+      <mat-card class="mat-elevation-z0" fxLayout="column" fxLayoutGap="10px">
+        <form [formGroup]="form" (ngSubmit)="login(); form.reset()" #loginForm="ngForm">
 
           <mat-card-content>
+
             <mat-form-field fxFlex>
-              <input matInput
-                    [formControl]="form.controls['empId']"
-                    placeholder="Employee ID" />
+
+              <input matInput [formControl]="form.controls['empId']" placeholder="Employee ID" />
 
               <mat-error *ngIf="form.controls['empId'].hasError('required') && form.controls['empId'].touched">
-                Employee ID is a required field
+                Employee ID is a required field.
               </mat-error>
+
               <mat-error *ngIf="form.controls['empId'].hasError('pattern') && form.controls['empId'].touched">
-                Employee ID must be numerical value
+                Employee ID must be a numerical value.
               </mat-error>
 
             </mat-form-field>
           </mat-card-content>
 
           <mat-card-actions>
-            <button type="submit"
-                    fxFlex
-                    mat-raised-button
-                    [disabled]="!form.valid"
-                    color="primary"
-                    >Submit</button>
+            <button type="submit" fxFlex mat-raised-button [disabled]="!form.valid" color="primary">Submit</button>
           </mat-card-actions>
 
         </form>
       </mat-card>
     </mat-card-content>
-
   </mat-card>
 </div>
