--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -19,9 +19,13 @@
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12); */
 }
-
 .title {
   text-align: center;
+  font-weight: lighter;
+}
+
+p {
+  /* text-align: center; */
   font-weight: lighter;
 }
 
@@ -42,6 +46,14 @@
   display: block; */
 }
 
+.task-card{
+  cursor: move;
+  min-height: 60px;
+  height: 68px;
+  font-size: 14px;
+  border-bottom: solid 1px #ccc;
+}
+
 .example-box {
   /* padding: 20px 10px;
   border-bottom: solid 1px #ccc;
@@ -55,8 +67,6 @@
   background: white;
   font-size: 14px; */
 }
-
-
 
 .cdk-drag-placeholder {
   /* opacity: 0; */
@@ -74,4 +84,13 @@
   /* transition: transform 250ms cubic-bezier(0, 0, 0.2, 1); */
 }
 
+
+/* .main-welcome{
+  margin-top: 30px;
+} */
+
+/* .title{
+  text-align: center;
+  font-weight: lighter;
+} */
 
