--- a/src/app/pages/task-manager/task-manager.component.html
+++ b/src/app/pages/task-manager/task-manager.component.html
@@ -8,91 +8,87 @@
 ;===========================================
 */ -->
 
+<div  class="myContainer" >
 
-<div class="myContainer">
-
-<div fxLayout="row">
-  <h2 class="title"> Hey {{name}}, here are your tasks.</h2>
-  <div fxFlex></div>
-  <button mat-button (click)="openDialog()">Create task</button>
+<div fxLayout="row" >
+    <!-- <h2>How you doing {{name}}? </h2> -->
+    <p>Hey {{name}}, how you doing?<br><br> Here is your tasks</p>
 </div>
+  <div fxLayout="row" fxLayoutGap="20px" >
 
-<div fxLayout="row" fxLayoutGap="20px" >
+    <div fxFlex>
+      <mat-card>
+        <mat-card-title >
+          ToDo
+          <div fxFlex></div>
+          <button [matMenuTriggerFor]="taskMenu" mat-button x-position="before">
+            <mat-icon>menu</mat-icon>
+          </button>
+          <mat-menu #taskMenu="matMenu" x-position="before">
+            <button mat-menu-item (click)="openDialog()">Create task</button>
+          </mat-menu>
+        </mat-card-title>
 
-  <div fxFlex>
-    <mat-card>
-      <mat-card-title class="title">
-        ToDo
-      </mat-card-title>
-      <hr>
+        <hr>
 
-      <mat-card-content>
-        <mat-list
-          cdkDropList
-          #todoList="cdkDropList"
-          [cdkDropListData]="todo"
-          [cdkDropListConnectedTo]="[doneList]"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-          mat-list>
+        <mat-card-content>
+          <mat-list cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[doneList]"
+            class="example-list" (cdkDropListDropped)="drop($event)" mat-list>
 
-          <mat-list-item class="example-box" *ngFor="let item of todo" cdkDrag>{{item.text}}
-            <div fxFlex></div>
+            <mat-list-item class="example-box" *ngFor="let item of todo" cdkDrag>{{item.text}}
+              <div fxFlex></div>
 
-            <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
-              <mat-icon class="icon">menu</mat-icon>
-            </button>
-
-            <mat-menu #deleteTask="matMenu" x-position="before">
-              <button (click)="deleteOne(item._id)" mat-menu-item>
-                Remove
+              <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
+                <mat-icon class="icon">menu</mat-icon>
               </button>
-            </mat-menu>
 
-            <mat-divider></mat-divider>
-          </mat-list-item>
+              <mat-menu #deleteTask="matMenu" x-position="before">
+                <button (click)="deleteOne(item._id)" mat-menu-item>
+                  Remove
+                </button>
+              </mat-menu>
 
-        </mat-list>
-      </mat-card-content>
-    </mat-card>
+              <mat-divider></mat-divider>
+            </mat-list-item>
+
+          </mat-list>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div fxFlex >
+      <mat-card>
+        <mat-card-title >
+          Done
+        </mat-card-title>
+        <hr>
+
+        <mat-card-content>
+          <!-- <mat-card-content style="padding-top:7px;"> -->
+          <mat-list cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]"
+            class="example-list" (cdkDropListDropped)="drop($event)" mat-list>
+
+            <mat-list-item class="example-box" *ngFor="let item of done" cdkDrag>{{item.text}}
+              <div fxFlex></div>
+
+              <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
+                <mat-icon style="color: #616771;">menu</mat-icon>
+              </button>
+
+              <mat-menu #deleteTask="matMenu" x-position="before">
+                <button (click)="deleteOne(item._id)" mat-menu-item>
+                  Remove
+                </button>
+              </mat-menu>
+
+              <mat-divider></mat-divider>
+            </mat-list-item>
+
+          </mat-list>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+  </div>
   </div>
 
-  <div fxFlex>
-    <mat-card>
-      <mat-card-title class="title">
-        Done
-      </mat-card-title>
-      <hr>
-
-      <mat-card-content>
-        <mat-list
-          cdkDropList
-          #doneList="cdkDropList"
-          [cdkDropListData]="done"
-          [cdkDropListConnectedTo]="[todoList]"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)" mat-list>
-
-          <mat-list-item class="example-box" *ngFor="let item of done" cdkDrag>{{item.text}}
-            <div fxFlex></div>
-
-            <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
-              <mat-icon class="icon">menu</mat-icon>
-            </button>
-
-            <mat-menu #deleteTask="matMenu" x-position="before">
-              <button (click)="deleteOne(item._id)" mat-menu-item>
-                Remove
-              </button>
-            </mat-menu>
-
-            <mat-divider></mat-divider>
-          </mat-list-item>
-
-        </mat-list>
-      </mat-card-content>
-    </mat-card>
-  </div>
-
-</div>
-</div>
