--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -23,16 +23,7 @@
       </div>
 
       <div fxFlex></div>
-      <!-- <button     class="navbar-link"
-                  routerLink="/login"
-                  mat-button>Login</button> -->
-     <!-- <button *ngIf="!isLoggedIn()"
-                  class="navbar-link"
-                  routerLink="/login"
-                  mat-button>Login</button>-->
-     <button mat-button
-        class="navbar-link"
-        (click)="logout()">Logout</button>
+     <button mat-button class="navbar-link" (click)="logout()">Logout</button>
     </mat-toolbar>
   </nav>
 
