--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -6,6 +6,7 @@
       <mat-card-subtitle class="mat-headline">Page Not Found</mat-card-subtitle>
 
     <mat-card-content>
+    <h1>WTF are you doing???? this isn't the right page</h1>  <br>
         <button mat-raised-button color="primary" routerLink="/">Back to home</button>
     </mat-card-content>
 
