--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -8,6 +8,10 @@
 .navbar-container {
   padding: 5px;
 }
+nav a:hover{
+  color: #00e676;
+
+}
 
 .navbar-link {
   font-size: 24px;
@@ -33,7 +37,9 @@
   letter-spacing: 3px;
   padding-left: 5%;
 }
-
+footer a{
+  color: #00e676;
+}
 .bu-link {
   text-decoration: none;
 }
