--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -8,42 +8,48 @@
 ;===========================================
 */
 
-.myContainer{
+/* .myContainer{
   width: 70%;
   margin: 0 auto;
 }
 .cdk-drag-preview {
   box-sizing: border-box;
-  /* border-radius: 4px;
+  border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12); */
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 .title {
   text-align: center;
   font-weight: lighter;
 }
+.mat-card{
+  background-color: #69f0ae;
+}
+.matButton{
+  background-color: #f44336;
+}
 
 p {
-  /* text-align: center; */
+  text-align: center;
   font-weight: lighter;
 }
 
 .example-container {
-  /* width: 400px;
+  width: 400px;
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
-  vertical-align: top; */
+  vertical-align: top;
 }
 
 .example-list {
-  /* border: solid 1px #ccc;
+  border: solid 1px #ccc;
   min-height: 60px;
   background: white;
   border-radius: 4px;
   overflow: hidden;
-  display: block; */
+  display: block;
 }
 
 .task-card{
@@ -55,7 +61,7 @@ p {
 }
 
 .example-box {
-  /* padding: 20px 10px;
+  padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
@@ -65,24 +71,24 @@ p {
   box-sizing: border-box;
   cursor: move;
   background: white;
-  font-size: 14px; */
+  font-size: 14px;
 }
 
 .cdk-drag-placeholder {
-  /* opacity: 0; */
+  opacity: 0;
 }
 
 .cdk-drag-animating {
-  /* transition: transform 250ms cubic-bezier(0, 0, 0.2, 1); */
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .example-box:last-child {
-  /* border: none; */
+  border: none;
 }
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  /* transition: transform 250ms cubic-bezier(0, 0, 0.2, 1); */
-}
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+} */
 
 
 /* .main-welcome{
@@ -94,3 +100,70 @@ p {
   font-weight: lighter;
 } */
 
+p {
+  width: 50%;
+  margin: 0 auto 15px;
+  font-weight: lighter;
+}
+.main-welcome {
+  margin-top: 30px;
+}
+
+.title {
+  text-align: center;
+  font-weight: lighter;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 14px;
+}
+
+.task-title {
+  font-weight: lighter;
+}
+
+.tasks-container {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.task-list {
+  border: solid 1px #ccc;
+  min-height: 60px;
+  background: white;
+  border-radius: 4px;
+  overflow: hidden;
+  display: block;
+}
+
+.task-card {
+  cursor: move;
+  min-height: 60px;
+  height: 68px;
+  font-size: 14px;
+  border-bottom: solid 1px #ccc
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+.example-box:last-child {
+  border: none;
+}
+
+.example-list.cdk-drop-list-dragging .task-card:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
