--- a/src/app/pages/task-manager/task-manager.component.html
+++ b/src/app/pages/task-manager/task-manager.component.html
@@ -7,22 +7,21 @@
 ; Description: home component html
 ;===========================================
 */ -->
-
+<!--
 <div  class="myContainer" >
 
 <div fxLayout="row" >
-    <!-- <h2>How you doing {{name}}? </h2> -->
     <p>Hey {{name}}, how you doing?<br><br> Here is your tasks</p>
 </div>
   <div fxLayout="row" fxLayoutGap="20px" >
 
     <div fxFlex>
-      <mat-card>
+      <mat-card >
         <mat-card-title >
           ToDo
           <div fxFlex></div>
           <button [matMenuTriggerFor]="taskMenu" mat-button x-position="before">
-            <mat-icon>menu</mat-icon>
+            <mat-icon color="accent">menu</mat-icon>
           </button>
           <mat-menu #taskMenu="matMenu" x-position="before">
             <button mat-menu-item (click)="openDialog()">Create task</button>
@@ -39,11 +38,11 @@
               <div fxFlex></div>
 
               <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
-                <mat-icon class="icon">menu</mat-icon>
+                <mat-icon color="accent">menu</mat-icon>
               </button>
 
               <mat-menu #deleteTask="matMenu" x-position="before">
-                <button (click)="deleteOne(item._id)" mat-menu-item>
+                <button class="matButton" (click)="deleteOne(item._id)" mat-menu-item>
                   Remove
                 </button>
               </mat-menu>
@@ -61,10 +60,10 @@
         <mat-card-title >
           Done
         </mat-card-title>
+
         <hr>
 
         <mat-card-content>
-          <!-- <mat-card-content style="padding-top:7px;"> -->
           <mat-list cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]"
             class="example-list" (cdkDropListDropped)="drop($event)" mat-list>
 
@@ -72,11 +71,11 @@
               <div fxFlex></div>
 
               <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
-                <mat-icon style="color: #616771;">menu</mat-icon>
+                <mat-icon color="accent">menu</mat-icon>
               </button>
 
               <mat-menu #deleteTask="matMenu" x-position="before">
-                <button (click)="deleteOne(item._id)" mat-menu-item>
+                <button class="matButton" (click)="deleteOne(item._id)" mat-menu-item>
                   Remove
                 </button>
               </mat-menu>
@@ -90,5 +89,106 @@
     </div>
 
   </div>
-  </div>
+  </div> -->
 
+  <div fxLayout="column" class="main-welcome">
+
+      <p >Hey {{name}}, how you doing?  <br><br> Here are your tasks</p>
+
+    <div fxLayout="row" fxLayoutGap="20px" class="tasks-container">
+      <div fxFlex>
+
+        <mat-card class="mat-elevation-z0">
+          <mat-card-title class="task-title">
+            ToDo
+            <div fxFlex></div>
+            <button [matMenuTriggerFor]="taskMenu" mat-button x-position="before">
+              <mat-icon color="accent">more_horiz</mat-icon>
+            </button>
+            <mat-menu #taskMenu="matMenu" x-position="before">
+              <button mat-menu-item (click)="openCreateTaskDialog()">Create task</button>
+            </mat-menu>
+          </mat-card-title>
+
+          <mat-card-content>
+            <div
+              fxLayout="column"
+              fxLayoutGap="10px"
+              cdkDropList
+              #todoList="cdkDropList"
+              [cdkDropListData]="todo"
+              [cdkDropListConnectedTo]="[doneList]"
+              class="task-list"
+              (cdkDropListDropped)="drop($event)">
+
+              <div *ngFor="let item of todo" cdkDrag>
+                <mat-card class="mat-elevation-z0 task-card" fxFlex>
+
+                  <mat-card-subtitle style="height: 10% !important;" class="task-functions">
+                    <div fxFlex></div>
+                    <button [matMenuTriggerFor]="todoOptionsMenu" mat-icon-button class="ml-xs">
+                      <mat-icon color="accent">more_horiz</mat-icon>
+                    </button>
+
+                    <mat-menu #todoOptionsMenu="matMenu" x-position="before">
+                      <button (click)="deleteTask(item._id)" mat-menu-item>
+                        Remove
+                      </button>
+                    </mat-menu>
+                  </mat-card-subtitle>
+
+                  <mat-card-content> {{item.text}} </mat-card-content>
+
+                </mat-card>
+              </div>
+
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+      <div fxFlex>
+        <mat-card class="mat-elevation-z0">
+          <mat-card-title class="task-title">
+            Done
+          </mat-card-title>
+
+<!-- list is inside card content -->
+          <mat-card-content style="padding-top: 7px;">
+
+            <!-- setup for the drag and drop -->
+            <div fxLayout="column"
+              fxLayoutGap="10px"
+              cdkDropList
+              #doneList="cdkDropList"
+              [cdkDropListData]="done"
+              [cdkDropListConnectedTo]="[todoList]"
+              class="task-list"
+              (cdkDropListDropped)="drop($event)">
+
+              <div *ngFor="let item of done" cdkDrag>
+              <!-- iterating over list and assigning each task to a card -->
+                <mat-card class="mat-elevation-z0 task-card" fxFlex>
+                  <mat-card-subtitle style="height: 10% !important;" class="task-functions">
+                    <div fxFlex></div>
+                    <!-- button for menu for pop up to delete -->
+                    <button [matMenuTriggerFor]="doneOptionsMenu" mat-icon-button class="ml-xs">
+                      <mat-icon color="accent">more_horiz</mat-icon>
+                    </button>
+                    <mat-menu #doneOptionsMenu="matMenu" x-position="before">
+                      <button (click)="deleteTask(item._id)" mat-menu-item>
+                        Remove
+                      </button>
+                    </mat-menu>
+                  </mat-card-subtitle>
+                  <!-- name of task -->
+                  <mat-card-content> {{item.text}} </mat-card-content>
+                </mat-card>
+              </div>
+            </div>
+          </mat-card-content>
+
+        </mat-card>
+      </div>
+    </div>
+  </div>
