--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -8,100 +8,20 @@
 ;===========================================
 */
 
-/* .myContainer{
-  width: 70%;
-  margin: 0 auto;
+.myContainer{
+  width: 50%;
+  margin: 3% auto 0;
 }
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-.title {
-  text-align: center;
-  font-weight: lighter;
-}
-.mat-card{
+/* .mat-card{
   background-color: #69f0ae;
-}
-.matButton{
+} */
+
+ .matButton{
   background-color: #f44336;
 }
 
 p {
-  text-align: center;
-  font-weight: lighter;
-}
-
-.example-container {
-  width: 400px;
-  max-width: 100%;
-  margin: 0 25px 25px 0;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.example-list {
-  border: solid 1px #ccc;
-  min-height: 60px;
-  background: white;
-  border-radius: 4px;
-  overflow: hidden;
-  display: block;
-}
-
-.task-card{
-  cursor: move;
-  min-height: 60px;
-  height: 68px;
-  font-size: 14px;
-  border-bottom: solid 1px #ccc;
-}
-
-.example-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-box:last-child {
-  border: none;
-}
-
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-} */
-
-
-/* .main-welcome{
-  margin-top: 30px;
-} */
-
-/* .title{
-  text-align: center;
-  font-weight: lighter;
-} */
-
-p {
-  width: 50%;
+  width: 100%;
   margin: 0 auto 15px;
   font-weight: lighter;
 }
@@ -124,7 +44,7 @@ p {
 }
 
 .tasks-container {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
 }
 
