--- a/src/app/pages/task-manager/task-manager.component.html
+++ b/src/app/pages/task-manager/task-manager.component.html
@@ -7,188 +7,104 @@
 ; Description: home component html
 ;===========================================
 */ -->
-<!--
-<div  class="myContainer" >
 
-<div fxLayout="row" >
-    <p>Hey {{name}}, how you doing?<br><br> Here is your tasks</p>
-</div>
-  <div fxLayout="row" fxLayoutGap="20px" >
+<div fxLayout="column" class="myContainer">
 
+  <div fxLayout="row">
+    <p>Hey {{name}}, how you doing? <br><br>
+      {{message}} </p>
+
+  </div>
+  <hr>
+
+  <!-- container for lists -->
+  <div fxLayout="row" fxLayoutGap="20px" class="tasks-container">
+
+    <!-- todo list -->
     <div fxFlex>
-      <mat-card >
-        <mat-card-title >
+
+      <mat-card class="mat-elevation-z0">
+        <!-- title with a menu to create new task  -->
+        <mat-card-title class="task-title">
           ToDo
           <div fxFlex></div>
           <button [matMenuTriggerFor]="taskMenu" mat-button x-position="before">
             <mat-icon color="accent">menu</mat-icon>
           </button>
           <mat-menu #taskMenu="matMenu" x-position="before">
-            <button mat-menu-item (click)="openDialog()">Create task</button>
+            <button mat-menu-item (click)="openDialog()">Need to add more?</button>
           </mat-menu>
         </mat-card-title>
 
-        <hr>
-
+        <!-- list is inside card content -->
         <mat-card-content>
-          <mat-list cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo" [cdkDropListConnectedTo]="[doneList]"
-            class="example-list" (cdkDropListDropped)="drop($event)" mat-list>
+          <!-- setup for the drag and drop -->
+          <div fxLayout="column" fxLayoutGap="10px" cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo"
+            [cdkDropListConnectedTo]="[doneList]" class="task-list" (cdkDropListDropped)="drop($event)">
 
-            <mat-list-item class="example-box" *ngFor="let item of todo" cdkDrag>{{item.text}}
-              <div fxFlex></div>
+            <div *ngFor="let item of todo" cdkDrag>
+              <!-- iterating over list and assigning each task to a card -->
+              <mat-card class="mat-elevation-z0 task-card" fxFlex>
 
-              <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
-                <mat-icon color="accent">menu</mat-icon>
-              </button>
+                <mat-card-subtitle style="height: 10% !important;" class="task-functions">
+                  <div fxFlex></div>
+                  <!-- button for menu for pop up to delete -->
+                  <button [matMenuTriggerFor]="deleteTodoTask" mat-icon-button class="ml-xs">
+                    <mat-icon color="accent">menu</mat-icon>
+                  </button>
 
-              <mat-menu #deleteTask="matMenu" x-position="before">
-                <button class="matButton" (click)="deleteOne(item._id)" mat-menu-item>
-                  Remove
-                </button>
-              </mat-menu>
-
-              <mat-divider></mat-divider>
-            </mat-list-item>
-
-          </mat-list>
+                  <mat-menu #deleteTodoTask="matMenu" x-position="before">
+                    <button class="matButton" (click)="deleteOne(item._id)" mat-menu-item>
+                      Remove
+                    </button>
+                  </mat-menu>
+                </mat-card-subtitle>
+                <!-- name of task -->
+                <mat-card-content> {{item.text}} </mat-card-content>
+              </mat-card>
+            </div>
+          </div>
         </mat-card-content>
       </mat-card>
     </div>
 
-    <div fxFlex >
-      <mat-card>
-        <mat-card-title >
+    <!-- done list -->
+    <div fxFlex>
+      <mat-card class="mat-elevation-z0">
+        <mat-card-title class="task-title">
           Done
         </mat-card-title>
 
-        <hr>
+        <!-- list is inside card content -->
+        <mat-card-content style="padding-top: 7px;">
 
-        <mat-card-content>
-          <mat-list cdkDropList #doneList="cdkDropList" [cdkDropListData]="done" [cdkDropListConnectedTo]="[todoList]"
-            class="example-list" (cdkDropListDropped)="drop($event)" mat-list>
+          <!-- setup for the drag and drop -->
+          <div fxLayout="column" fxLayoutGap="10px" cdkDropList #doneList="cdkDropList" [cdkDropListData]="done"
+            [cdkDropListConnectedTo]="[todoList]" class="task-list" (cdkDropListDropped)="drop($event)">
 
-            <mat-list-item class="example-box" *ngFor="let item of done" cdkDrag>{{item.text}}
-              <div fxFlex></div>
-
-              <button mat-icon-button [matMenuTriggerFor]="deleteTask" class="ml-xs">
-                <mat-icon color="accent">menu</mat-icon>
-              </button>
-
-              <mat-menu #deleteTask="matMenu" x-position="before">
-                <button class="matButton" (click)="deleteOne(item._id)" mat-menu-item>
-                  Remove
-                </button>
-              </mat-menu>
-
-              <mat-divider></mat-divider>
-            </mat-list-item>
-
-          </mat-list>
+            <div *ngFor="let item of done" cdkDrag>
+              <!-- iterating over list and assigning each task to a card -->
+              <mat-card class="mat-elevation-z0 task-card" fxFlex>
+                <mat-card-subtitle style="height: 10% !important;" class="task-functions">
+                  <div fxFlex></div>
+                  <!-- button for menu for pop up to delete -->
+                  <button [matMenuTriggerFor]="deleteDoneTask" mat-icon-button class="ml-xs">
+                    <mat-icon color="accent">menu</mat-icon>
+                  </button>
+                  <mat-menu #deleteDoneTask="matMenu" x-position="before">
+                    <button class="matButton" (click)="deleteOne(item._id)" mat-menu-item>
+                      Remove
+                    </button>
+                  </mat-menu>
+                </mat-card-subtitle>
+                <!-- name of task -->
+                <mat-card-content> {{item.text}} </mat-card-content>
+              </mat-card>
+            </div>
+          </div>
         </mat-card-content>
+
       </mat-card>
     </div>
-
   </div>
-  </div> -->
-
-  <div fxLayout="column" class="main-welcome">
-
-      <p >Hey {{name}}, how you doing?  <br><br> Here are your tasks</p>
-
-    <div fxLayout="row" fxLayoutGap="20px" class="tasks-container">
-      <div fxFlex>
-
-        <mat-card class="mat-elevation-z0">
-          <mat-card-title class="task-title">
-            ToDo
-            <div fxFlex></div>
-            <button [matMenuTriggerFor]="taskMenu" mat-button x-position="before">
-              <mat-icon color="accent">more_horiz</mat-icon>
-            </button>
-            <mat-menu #taskMenu="matMenu" x-position="before">
-              <button mat-menu-item (click)="openCreateTaskDialog()">Create task</button>
-            </mat-menu>
-          </mat-card-title>
-
-          <mat-card-content>
-            <div
-              fxLayout="column"
-              fxLayoutGap="10px"
-              cdkDropList
-              #todoList="cdkDropList"
-              [cdkDropListData]="todo"
-              [cdkDropListConnectedTo]="[doneList]"
-              class="task-list"
-              (cdkDropListDropped)="drop($event)">
-
-              <div *ngFor="let item of todo" cdkDrag>
-                <mat-card class="mat-elevation-z0 task-card" fxFlex>
-
-                  <mat-card-subtitle style="height: 10% !important;" class="task-functions">
-                    <div fxFlex></div>
-                    <button [matMenuTriggerFor]="todoOptionsMenu" mat-icon-button class="ml-xs">
-                      <mat-icon color="accent">more_horiz</mat-icon>
-                    </button>
-
-                    <mat-menu #todoOptionsMenu="matMenu" x-position="before">
-                      <button (click)="deleteTask(item._id)" mat-menu-item>
-                        Remove
-                      </button>
-                    </mat-menu>
-                  </mat-card-subtitle>
-
-                  <mat-card-content> {{item.text}} </mat-card-content>
-
-                </mat-card>
-              </div>
-
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div fxFlex>
-        <mat-card class="mat-elevation-z0">
-          <mat-card-title class="task-title">
-            Done
-          </mat-card-title>
-
-<!-- list is inside card content -->
-          <mat-card-content style="padding-top: 7px;">
-
-            <!-- setup for the drag and drop -->
-            <div fxLayout="column"
-              fxLayoutGap="10px"
-              cdkDropList
-              #doneList="cdkDropList"
-              [cdkDropListData]="done"
-              [cdkDropListConnectedTo]="[todoList]"
-              class="task-list"
-              (cdkDropListDropped)="drop($event)">
-
-              <div *ngFor="let item of done" cdkDrag>
-              <!-- iterating over list and assigning each task to a card -->
-                <mat-card class="mat-elevation-z0 task-card" fxFlex>
-                  <mat-card-subtitle style="height: 10% !important;" class="task-functions">
-                    <div fxFlex></div>
-                    <!-- button for menu for pop up to delete -->
-                    <button [matMenuTriggerFor]="doneOptionsMenu" mat-icon-button class="ml-xs">
-                      <mat-icon color="accent">more_horiz</mat-icon>
-                    </button>
-                    <mat-menu #doneOptionsMenu="matMenu" x-position="before">
-                      <button (click)="deleteTask(item._id)" mat-menu-item>
-                        Remove
-                      </button>
-                    </mat-menu>
-                  </mat-card-subtitle>
-                  <!-- name of task -->
-                  <mat-card-content> {{item.text}} </mat-card-content>
-                </mat-card>
-              </div>
-            </div>
-          </mat-card-content>
-
-        </mat-card>
-      </div>
-    </div>
-  </div>
+</div>
