--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -12,7 +12,7 @@
 
   <!-- navigation -->
   <nav fxFlex>
-    <mat-toolbar>
+    <mat-toolbar color="accent">
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
@@ -34,7 +34,7 @@
   <!-- footer -->
   <div fxFlex>
     <footer class="footer">
-      <mat-toolbar class="footer-content">
+      <mat-toolbar class="footer-content" color="accent">
         <p>
           &copy; {{year | date: 'yyyy'}} - nodebucket - <a href="https://www.bellevue.edu/" class="bu-link"
             target="_blank">Bellevue University</a>
