--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -2,18 +2,33 @@
   <h1 fxFlex class="title">
     Nodebucket 101
     <br>
-    <span class="subtitle">Subtitle for my about</span>
+    <span class="subtitle">A little about this project</span>
   </h1>
+
   <div class="about-content">
-    <mat-divider></mat-divider><br>
-    <p class="mat-body-for">
-      <span class="p-title mat-headline">Overview</span><br>
-      personal about page info. what is nodebucket to me
-    </p>
-    <p class="mat-body-for">
-      <span class="p-title mat-headline">
-        talking about the application itself
-      </span>
+    <mat-divider></mat-divider>
+    <p class="mat-body-4">
+      <span class="mat-headline">Nodebucket... the struggle</span>
+      <br><br>
+      Nodebucket is a task management system. It is designed for work atmosphere with employees. This has been designed
+      with expansion in mind. As it is right now the person logged in is the only one that can add, update and delete
+      tasks. This could be extended out for management to use by adding employee roles. Management could then add and
+      assign tasks.
+      <br><br>
+      My original idea was to have all the tasks in one area. Employees would log in and pick what
+      they wanted to do. This would mark the task as in progress. When they moved it to done it would be updated for
+      everyone. I overthought everything the first couple weeks and lost time to do this. This could be developed some
+      more to add more functionality.
+      <br><br>
+      I learned a lot about myself while doing this project. I learned that I overthink too much. I
+      just need to do whatever I am thinking and go back if it was wrong. I overanalyzed the file structure in the
+      beginning. Every book we read for this program was by different authors. They all had different ways of
+      programming. The instructional videos provided yet another way. And finally, the instructors had yet another way.
+      Looking back on everything I tried to add a little of everything in, when all I should have done was do it my way.
+      It would have all worked out in the end.
+      <br><br>
+      I enjoyed working on this application though. It showed what I really need to focus on as a
+      developer and designer.
     </p>
   </div>
 </div>
