--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -1,16 +1,11 @@
 .logo {
   margin-left: 75px;
-  /* margin-left: 5%; */
   font-size: 24px;
   font-weight: lighter;;
 }
 
 .navbar-container {
   padding: 5px;
-}
-
-nav a:hover{
-  color: #00e676;
 }
 
 .navbar-link {
@@ -31,13 +26,8 @@ nav a:hover{
 .footer-content {
   font-size: 16px;
   font-weight: lighter;
-  /* padding-left: 100px; */
+  padding-left: 100px;
   letter-spacing: 3px;
-  padding-left: 5%;
-}
-
-footer a{
-  color: #00e676;
 }
 
 .bu-link {
