--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -1,22 +1,54 @@
 /*
 ============================================
 ; Title:  task-manager.component.css
-; Author: Richard Krasso
-; Modified By: Loren Wetzel
+; Author: Loren Wetzel
+; Modified By:
 ; Date:   18 March 2020
 ; Description: css for task manager
 ;===========================================
 */
 
-.example-container {
-  width: 400px;
-  max-width: 100%;
-  margin: 0 25px 25px 0;
-  display: inline-block;
-  vertical-align: top;
+.myContainer{
+  width: 50%;
+  margin: 3% auto 0;
+}
+/* .mat-card{
+  background-color: #69f0ae;
+} */
+
+ .matButton{
+  background-color: #f44336;
 }
 
-.example-list {
+p {
+  width: 100%;
+  margin: 0 auto 15px;
+  font-weight: lighter;
+}
+.main-welcome {
+  margin-top: 30px;
+}
+
+.title {
+  text-align: center;
+  font-weight: lighter;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 14px;
+}
+
+.task-title {
+  font-weight: lighter;
+}
+
+.tasks-container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.task-list {
   border: solid 1px #ccc;
   min-height: 60px;
   background: white;
@@ -25,26 +57,20 @@
   display: block;
 }
 
-.example-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
+.task-card {
   cursor: move;
-  background: white;
+  min-height: 60px;
+  height: 68px;
   font-size: 14px;
+  border-bottom: solid 1px #ccc
 }
 
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
@@ -54,16 +80,10 @@
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-
 .example-box:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.example-list.cdk-drop-list-dragging .task-card:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.myContainer{
-  width: 80%;
-  margin: 15px auto 0;
 }
