--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -1,1 +1,46 @@
-<p>auth-layout works!</p>
+<!-- /*
+============================================
+; Title:  nodebucket
+; Author: Loren Wetzel
+; Modified By:
+; Date:   25 March 2020
+; Description: auth component html
+;===========================================
+*/ -->
+
+<div fxLayout="column">
+
+  <!-- navigation -->
+  <nav fxFlex>
+    <mat-toolbar color="accent">
+      <!-- navbar container -->
+      <div class="navbar-container">
+        <!-- logo -->
+        <div class="navbar-container">
+          <!-- logo -->
+          <button class="logo" routerLink="/" mat-button>nodebucket</button>
+        </div>
+      </div>
+    </mat-toolbar>
+  </nav>
+
+  <!-- main content -->
+  <div fxFlex>
+    <main class="main-content" fxFlex="100%;">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+
+  <!-- footer -->
+  <div fxFlex>
+    <footer class="footer">
+      <mat-toolbar class="footer-content" color="accent">
+        <p>
+          &copy; {{year | date: 'yyyy'}} - nodebucket - <a href="https://www.bellevue.edu/" class="bu-link"
+            target="_blank">Bellevue University</a>
+        </p>
+      </mat-toolbar>
+    </footer>
+  </div>
+
+</div>
