--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -12,7 +12,7 @@
 
   <!-- navigation -->
   <nav fxFlex>
-    <mat-toolbar>
+    <mat-toolbar color="primary">
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
@@ -23,17 +23,7 @@
       </div>
 
       <div fxFlex></div>
-      <button     class="navbar-link"
-                  routerLink="/login"
-                  mat-button>Login</button>
-     <!-- <button *ngIf="!isLoggedIn()"
-                  class="navbar-link"
-                  routerLink="/login"
-                  mat-button>Login</button>
-     <button *ngIf="isLoggedIn()"
-                  mat-button
-                  class="navbar-link"
-                  (click)="logout()">Logout</button> -->
+     <button mat-button class="navbar-link" (click)="logout()">Logout</button>
     </mat-toolbar>
   </nav>
 
@@ -47,10 +37,10 @@
   <!-- footer -->
   <div fxFlex>
     <footer class="footer">
-      <mat-toolbar class="footer-content">
+      <mat-toolbar class="footer-content" color="primary">
         <p>
           &copy; {{year | date: 'yyyy'}} - nodebucket - <a href="https://www.bellevue.edu/" class="bu-link"
-            target="_blank">Bellevue University</a>
+            target="_blank" >Bellevue University</a>
         </p>
       </mat-toolbar>
     </footer>
