thought there was a problem and fixed something unrelated

--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -9,8 +9,13 @@
 */
 
 .myContainer{
-  width: 50%;
+  width: 70%;
   margin: 3% auto 0;
+}
+@media screen and (max-width: 900px) {
+  .myContainer {
+    width: 100%;
+  }
 }
 /* .mat-card{
   background-color: #69f0ae;
