--- a/src/app/pages/task-manager/task-manager.component.html
+++ b/src/app/pages/task-manager/task-manager.component.html
@@ -93,7 +93,7 @@
                   </button>
                   <mat-menu #deleteDoneTask="matMenu" x-position="before">
                     <button class="matButton" (click)="deleteOne(item._id)" mat-menu-item>
-                      Remove
+                      Remove for good!!
                     </button>
                   </mat-menu>
                 </mat-card-subtitle>
