--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -18,7 +18,7 @@
         <!-- logo -->
         <div class="navbar-container">
           <!-- logo -->
-          <button class="logo" routerLink="/" mat-button>nodebucket</button>
+          <button class="logo" routerLink="/" mat-button><img src="/assets/images/android-chrome-192x192.png" width="100px" height="60px"></button>
         </div>
       </div>
     </mat-toolbar>
