--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -13,10 +13,11 @@
   <!-- navigation -->
   <nav fxFlex>
     <mat-toolbar color="primary">
+
       <!-- navbar container -->
       <div class="navbar-container">
         <!-- logo -->
-        <button class="logo" routerLink="/" mat-button>nodebucket</button>
+        <button class="logo" routerLink="/" mat-button><img src="/assets/images/android-chrome-192x192.png" width="100px" height="60px"></button>
 
         <button class="navbar-link" routerLink="/" mat-button>Home</button>
         <button class="navbar-link" routerLink="/about" mat-button>About</button>
