styling, adding code attribution and comments

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,13 @@
+<!-- /*
+============================================
+; Title:  nodebucket
+; Author: Loren Wetzel
+; Modified By:
+; Date:   18 March 2020
+; Description: about component html
+;===========================================
+*/ -->
+
 <div fxLayout="column" class="main-welcome" fxLayoutGap=10px>
   <h1 fxFlex class="title">
     Nodebucket 101
