--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,5 +1,14 @@
+/*
+============================================
+; Title:  nodebucket
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
+; Date:   18 March 2020
+; Description: home css
+;===========================================
+*/
 .main-welcome {
-  margin-top: 15px;
+  /* margin-top: 1%; */
   margin-bottom: 0;
 }
 
