--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,18 @@
-<div fxLayout="column" class="main-welcome">
+<!-- /*
+============================================
+; Title:  nodebucket
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
+; Date:   18 March 2020
+; Description: home component html
+;===========================================
+*/ -->
+
+<!-- <div fxLayout="column" class="main-welcome"> -->
+<div fxFlex>
   <h1 class="title">
     nodebucket Project
   </h1>
-
+  <app-task-manager></app-task-manager>
 </div>
-<app-task-manager></app-task-manager>
+
