--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -1,8 +1,8 @@
 <!-- /*
 ============================================
-; Title:  nodebucket
-; Author: Loren Wetzel
-; Modified By:
+; Title:  Nodebucket
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
 ; Date:   18 March 2020
 ; Description: sign-in component html
 ;===========================================
