--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,6 +1,16 @@
+/*
+============================================
+; Title:  nodebucket
+; Author: Loren Wetzel
+; Modified By:
+; Date:   18 March 2020
+; Description: css for about page
+;===========================================
+*/
+
 .main-welcome {
-  width: 60%;
-  margin: 20px auto 0;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .title {
