--- a/src/app/pages/not-found/not-found.component.css
+++ b/src/app/pages/not-found/not-found.component.css
@@ -1,3 +1,13 @@
+/*
+============================================
+; Title:  Nodebucket
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
+; Date:   18 March 2020
+; Description: not found component css
+;===========================================
+*/
+
 mat-card {
   background-color: yellow;
   /* margin-top: 15%; */
