--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,3 +1,13 @@
+<!-- /*
+============================================
+; Title:  Nodebucket
+; Author: Richard Krasso
+; Modified By: Loren Wetzel
+; Date:   18 March 2020
+; Description: not found component html
+;===========================================
+*/ -->
+
 <div fxLayout="column">
 
   <mat-card fxFlex class="mat-elevation-z8">
