--- a/src/app/pages/task-manager/task-manager.component.css
+++ b/src/app/pages/task-manager/task-manager.component.css
@@ -1,6 +1,6 @@
 /*
 ============================================
-; Title:  task-manager.component.css
+; Title:  nodebucket
 ; Author: Loren Wetzel
 ; Modified By:
 ; Date:   18 March 2020
@@ -8,26 +8,16 @@
 ;===========================================
 */
 
-.myContainer{
-  width: 80%;
-  margin: 3% auto 0;
+.myContainer {
 }
-@media screen and (max-width: 900px) {
-  .myContainer {
-    width: 100%;
-  }
-}
-/* .mat-card{
-  background-color: #69f0ae;
-} */
 
- .matButton{
+.matButton {
   background-color: #f44336;
 }
 
 p {
   width: 100%;
-  margin: 0 auto 15px;
+  margin: 0 auto 10px;
   font-weight: lighter;
 }
 .main-welcome {
@@ -67,15 +57,14 @@ p {
   min-height: 60px;
   height: 68px;
   font-size: 14px;
-  border-bottom: solid 1px #ccc
+  border-bottom: solid 1px #ccc;
 }
 
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-  0 8px 10px 1px rgba(0, 0, 0, 0.14),
-  0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
