--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -1,3 +1,13 @@
+/*
+============================================
+; Title:  nodebucket
+; Author: Loren Wetzel
+; Modified By:
+; Date:   18 March 2020
+; Description: personal theme
+;===========================================
+*/
+
 @import '~@angular/material/theming';
 
 @include mat-core();
