cleaning up code. adding attribution and comments

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,8 +11,9 @@
 <!-- <div fxLayout="column" class="main-welcome"> -->
 <div fxFlex>
   <h1 class="title">
-    nodebucket Project
+    nodebucket
   </h1>
+  <!-- put task manager component inside home component  -->
   <app-task-manager></app-task-manager>
 </div>
 
